# Blackbox-Analyzer

./: .gitignore  CNAME  README.md  index.html  package-lock.json  package.json  rsw.toml  site.webmanifest  tsconfig.json  vite.config.ts
.github/workflows/: build.yml
@cargo/analysis/: Cargo.toml
@cargo/analysis/src/: lib.rs
assets/: analysis_bg-1f79d6ea.wasm  analysis_bg-3b734964.wasm  analysis_bg-43a2106e.wasm  analysis_bg-4b58229f.wasm  analysis_bg-5115eade.wasm  analysis_bg-733a054c.wasm  analysis_bg.0842808d.wasm  analysis_bg.17cbd68c.wasm  analysis_bg.48db5c66.wasm  analysis_bg.59b8f77a.wasm  analysis_bg.956d58f4.wasm  analysis_bg.99918022.wasm  analysis_bg.9d3c3c74.wasm  analysis_bg.af4f237e.wasm  analysis_bg.b975cbc5.wasm  analysis_bg.f34cad60.wasm  fft-57e3cd2c.js  fft-bb6e6f98.js  fft-c92969d3.js  fft-e3692286.js  fft-e7da8bf0.js  fft-ea583f40.js  fft.2b6e7ee4.js  fft.699aea0d.js  fft.7d838082.js  fft.98247a92.js  fft.bf92787a.js  fft.d8680b08.js  fft.dcbbf48f.js  fft.e94733af.js  fft.edd14f10.js  fft.f40c4bc9.js  index-0670a5ec.css  index-0758bcfd.js  index-0e347c85.js  index-187d1d4e.js  index-1947c229.css  index-1f844ada.css  index-21c5e45b.js  index-25b56c68.css  (+67 more)
public/assets/: blackbox.json
src/: App.vue  main.ts  style.scss
src/analysis/: index.ts  render.ts  worker.ts
src/components/: CanvasComponent.vue  EmptyState.vue  NavComponent.vue  SpectrumGraphComponent.vue  SpinnerBtn.vue  StickOverlay.vue  ThrottleHeatmapComponent.vue  TimeGraphComponent.vue  TimelineComponent.vue
src/mixin/: icons.ts
src/router/: index.ts
src/worker/: fft.ts  (+1 more)
(+8 files in other folders)
